# superrational-ai-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
public_logs/: 2025-10-03T21-33-43-04-00_play-game_QnYUQeEuwCiRjBXVLaC5Qe.eval  gpt-5-mini.eval  gpt-5-old.eval  gpt-5.eval  qwen-2.5-7b-instruct.eval
results/: results.csv
src/analysis/: analyze_logs.py  plot_games_comparison.py  plot_heatmap.py  plot_model_comparison.py  plot_model_comparison_lines.py  plot_results.py  plot_two_models_comparison.py
src/superrational_ai_agents/: _registry.py  eval.py  games.py  task.py
