[project]
name = "superrational-ai-agents"
version = "0.1.0"
description = "Superrational AI Agents project"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "google-genai>=1.41.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superrational_ai_agents"]

[project.entry-points.inspect_ai]
superrational_ai_agents = "superrational_ai_agents._registry"

[tool.uv]
dev-dependencies = []
